[gd_scene load_steps=11 format=2]

[ext_resource path="res://components/fulltext_search_menu/menu_full_text_search.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/search-01.svg" type="Texture" id=2]
[ext_resource path="res://assets/theme/Barlow-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/theme/Barlow-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/theme/SourceCodePro-Medium.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.0392157, 0.145098, 0.247059, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=2]
size = 15
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 15
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 15
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="FullTextSearch" type="LineEdit"]
margin_left = 1610.0
margin_top = 2.0
margin_right = 1910.0
margin_bottom = 37.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 4
theme = ExtResource( 4 )
custom_colors/selection_color = Color( 0.462745, 0.176471, 0.843137, 1 )
custom_colors/cursor_color = Color( 0.85098, 0.721569, 1, 1 )
custom_colors/clear_button_color_pressed = Color( 0.956942, 0.673993, 1, 1 )
custom_colors/font_color_selected = Color( 0.1, 0.1, 0.1, 1 )
custom_colors/font_color = Color( 0.85098, 0.721569, 1, 1 )
custom_colors/clear_button_color = Color( 0.913725, 0.552941, 0.968627, 1 )
clear_button_enabled = true
deselect_on_focus_loss_enabled = false
right_icon = ExtResource( 2 )
placeholder_text = "search or aggregate"
placeholder_alpha = 0.3
script = ExtResource( 1 )

[node name="ResultsPopUp" type="PopupPanel" parent="."]
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="VBox" type="VBoxContainer" parent="ResultsPopUp"]
margin_left = 10.0
margin_top = 10.0
margin_right = 76.0
margin_bottom = 37.0

[node name="Title" type="HBoxContainer" parent="ResultsPopUp/VBox"]
margin_right = 66.0
margin_bottom = 27.0

[node name="ResultAmountLabel" type="Label" parent="ResultsPopUp/VBox/Title"]
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3

[node name="ListButton" type="Button" parent="ResultsPopUp/VBox/Title"]
margin_left = 4.0
margin_right = 66.0
margin_bottom = 27.0
theme_type_variation = "ButtonComboList"
text = "more"

[node name="SearchDelay" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="PopupLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ResultsPopUp" type="PanelContainer" parent="PopupLayer"]
visible = false
margin_left = 1324.0
margin_top = 41.0
margin_right = 1909.0
margin_bottom = 286.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="VBox" type="VBoxContainer" parent="PopupLayer/ResultsPopUp"]
margin_left = 10.0
margin_top = 10.0
margin_right = 575.0
margin_bottom = 235.0

[node name="Title" type="HBoxContainer" parent="PopupLayer/ResultsPopUp/VBox"]
margin_right = 565.0

[node name="ErrorMessage" type="RichTextLabel" parent="PopupLayer/ResultsPopUp/VBox/Title"]
unique_name_in_owner = true
visible = false
margin_right = 380.0
margin_bottom = 59.0
rect_min_size = Vector2( 380, 0 )
size_flags_horizontal = 3
custom_colors/default_color = Color( 0.537255, 0.819608, 0.945098, 1 )
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[b]Error: Parse Error[/b]
[b]Message: Can not parse[/b]
[code]Expected one of [/code]"
text = "Error: Parse Error
Message: Can not parse
Expected one of "
fit_content_height = true

[node name="ResultAmountLabel" type="Label" parent="PopupLayer/ResultsPopUp/VBox/Title"]
visible = false
margin_right = 499.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 27 )
size_flags_horizontal = 3

[node name="ListButton" type="Button" parent="PopupLayer/ResultsPopUp/VBox/Title"]
visible = false
margin_left = 437.0
margin_right = 499.0
margin_bottom = 27.0
focus_neighbour_top = NodePath("../../../../..")
theme_type_variation = "ButtonComboList"
text = "more"

[node name="AggregationButton" type="Button" parent="PopupLayer/ResultsPopUp/VBox/Title"]
visible = false
margin_right = 565.0
margin_bottom = 26.0
focus_neighbour_top = NodePath("../../../../..")
size_flags_horizontal = 3
theme_type_variation = "ButtonComboList"
text = "View result in Aggregation View"

[connection signal="focus_entered" from="." to="." method="_on_FullTextSearch_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_FullTextSearch_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_FullTextSearch_gui_input"]
[connection signal="text_changed" from="." to="." method="_on_FullTextSearch_text_changed"]
[connection signal="text_entered" from="." to="." method="_on_FullTextSearch_text_entered"]
[connection signal="pressed" from="ResultsPopUp/VBox/Title/ListButton" to="." method="_on_ListButton_pressed"]
[connection signal="timeout" from="SearchDelay" to="." method="_on_SearchDelay_timeout"]
[connection signal="pressed" from="PopupLayer/ResultsPopUp/VBox/Title/ListButton" to="." method="_on_ListButton_pressed"]
[connection signal="pressed" from="PopupLayer/ResultsPopUp/VBox/Title/AggregationButton" to="." method="_on_AggregationButton_pressed"]
